fix spacing on index

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,14 +33,6 @@ nav ul li a {
   color: black;
 }
 
-.homepage {
- background: #33CCCC;
- color: #999;
- padding: 15px;
- border-radius: 5px;
- margin: 1%; 
-}
-
 p {
   clear: both;
 }
